--- a/module4-solution/src/templates/categoriesList.template.html
+++ b/module4-solution/src/templates/categoriesList.template.html
@@ -18,7 +18,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="item in $ctrl.items" ui-sref="categoryitems({shortName:{{item.short_name}}})">
+    <tr ng-repeat="item in $ctrl.items" ui-sref="categoryitems({shortName: item.short_name})">
       <td>
         {{item.short_name}}
       </td>
